<resources>
    <string name="app_name">Consulta CPF - Score, Dívidas, Nome Sujo, Situação</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_consultar">Consultar Cpf</string>
    <string name="title_home">Consulta CPF e CNPJ</string>
    <string name="home_text">Consulta CPF e CNPJ</string>
    <string name="title_consultar_score_serasa">Consultar Score Serasa</string>
    <string name="title_consultar_cnpj">Consultar CNPJ</string>
    <string name="texto_1">Consultar CPF e CNPJ</string>
    <string name="texto_2">
        Faça consulta da situação cadastral de empresas e
        pessoas físicas e aprenda sobre a importância desses
        dados e como eles podem lhe afetar.
    </string>
    <string name="texto_3">
        Verificar a situação cadastral de algum CPF.
    </string>
    <string name="texto_4">
        Consulte o status e situação cadastral de alguma empresa ou entidade
    </string>
    <string name="texto_5">Consulte o suas dívidas no Serasa de forma fácil e prática.</string>
    <string name="title_historico_pesquisa">Histórico de pesquisa</string>
    <string name="texto_6">Veja o histórico de consultas que você fez.</string>
    <string name="texto_7">Consulte as suas dívidas no Serasa</string>
    <string name="texto_8">O score é uma pontuação que vai de 0 a 1000. Quanto maior o seu score, maior a possíbilidade de conseguir aprovação de crédtido.</string>
    <string name="texto_9">Para acessar seu score, é necessário ter cadastro no site do serasa. Você já tem cadastro?</string>
    <string name="texto_12">Para acessar seu score, é necessário ter cadastro no site do Boa Vista. Você já tem cadastro?</string>
    <string name="cpf">CPF</string>
    <string name="buscar">BUSCAR</string>
    <string name="captch">CAPTCHA</string>
    <string name="nascimento">Nascimento</string>
    <string name="title_informacoes">Informações CPF</string>
    <string name="status" />
    <string name="nome">Nome</string>
    <string name="dataInscricao">Data de inscrição</string>
    <string name="verificador">Verificador</string>
    <string name="instrucao">CAPATCHA: Captcha é o código de segurança que aparece na imagem acima. Ele serve para garantir que você não seja um robô.</string>
    <string name="app_id" translatable="false">ca-app-pub-8817634033676287~5211696946</string>

    <!--<string name="intersticial_ad_unit_id" translatable="false">ca-app-pub-8817634033676287/1527010873</string>
    <string name="banner_ad_unit_id">ca-app-pub-8817634033676287/6245242245</string>-->
    <string name="intersticial_ad_unit_id" translatable="false">ca-app-pub-3940256099942544/8691691433</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="title_activity_splash">Splash</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="facebook_app_id">1926442160881505</string>
    <string name="facebook_client_token">37cb5297c347453dfb63229a6ef3beac</string>
    <string name="title_boa_vista">Boa Vista</string>
    <string name="texto_10">Verifique suas divídas através da boa vista consumidor.</string>
    <string name="texto_11">Consultar Score no Boa Vista</string>
    <string name="appodeal_token">56369a5edff6a5c3837df24c575d19458d017388e02ad3ae</string>
</resources>