<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.InformacoesCPF.InformacoesCPF">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status"
            android:textSize="50dp"
            android:textAlignment="center"
            android:paddingVertical="20dp"
            android:background="@color/green"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:stretchColumns="1"
            >
            <TableRow>
                <TextView
                    android:text="@string/cpf"
                    android:padding="30dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/cpfField"
                    android:padding="30dp"
                    android:gravity="left"
                    android:textSize="15dp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/nome"
                    android:padding="30dp"
                    android:textAlignment="center"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/nomeField"
                    android:padding="30dp"
                    android:gravity="center"
                    android:textSize="15dp"
                    />
            </TableRow>

            <TableRow>
                <TextView
                    android:text="@string/nascimento"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/nascimentoField"
                    android:gravity="left"
                    android:padding="30dp"
                    android:textSize="20dp"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/dataInscricao"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/dataInscricaoField"
                    android:padding="30dp"
                    android:textSize="20dp"
                    android:gravity="left"
                    />
            </TableRow>
            <TableRow>
                <TextView
                    android:text="@string/verificador"
                    android:textAlignment="center"
                    android:padding="30dp"
                    android:textSize="20dp"
                    />
                <TextView
                    android:id="@+id/verificadorField"
                    android:padding="30dp"
                    android:textSize="20dp"
                    android:gravity="left"
                    />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>